@@ -1,9 +1,12 @@
 06/12/2008: v2.3.1
 	- updated Chinese translations
 	- updated Romanian translation
-	- added Multiple tables for leagues feature
+	- added possibility for multiple tables in leagues (think
+	  apertura/clausura in south america)
 	- added joined leagues feature (think conferences in US sports)
-	- Solved some minor bugs
+	- solved some minor bugs
+	- added clicking in tables and fixtures mode (switches to the
+	  other view, respectively)
 
 06/11/2008: v2.3.0
 	- added flag for Montenegro (thanks to Mihai Floran)
